Spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,6 @@ h2 {
 
 p {
   line-height: 1.5;
-  margin: .7em 0;
 }
 .page-content > p:first-child {
   margin-top: 2em;
